--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-composition",
+  "name": "react-component-composition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
